--- a/apartados Nueva version/Causas.html
+++ b/apartados Nueva version/Causas.html
@@ -194,16 +194,12 @@
                     <tr>
                         <th>
                             <p>
-                                <label for="Comentario"><b>Añade tu comentario</b></label>
-                            </p>
-                            <p>
                                 <div class="reset">
                                     <form>
-                                        <textarea rows="2" cols="50"></textarea>
+                                        <textarea rows="1" cols="50">Añade tu comentario...</textarea>
                                         <input type="submit" value="Añadir comentario">
                                     </form>                                      
                                 </div>
-
                             </p>
                         </th>
                     </tr>
