--- a/apartados Nueva version/Introduccion.html
+++ b/apartados Nueva version/Introduccion.html
@@ -176,12 +176,11 @@
                     <tr>
                         <th>
                             <p>
-                                <label for="Comentario"><b>Añade tu mensaje</b></label>
-                            </p>
-                            <p>
                                 <div class="reset">
-                                    <input type="text" id="Comentario" name="comentario" placeholder="Comentario" size="40">
-                                    <input value="Añadir comentario" type="submit"> 
+                                    <form>
+                                        <textarea rows="1" cols="50">Añade tu comentario...</textarea>
+                                        <input type="submit" value="Añadir comentario">
+                                    </form>                                      
                                 </div>
                             </p>
                         </th>
