--- a/apartados Nueva version/TRATAMIENTO.html
+++ b/apartados Nueva version/TRATAMIENTO.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardiopatía</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="stylePrevenciones.css">
 
 </head>
 <body>
@@ -13,64 +13,53 @@
             <ul>
                 <li>
                     <div class="volver">
-                        <a href="posarlinkpertornar" class="Volver">
+                        <a href="Introduccion.html" class="Volver">
                             <b>Volver</b>
                         </a>
                     </div>
                 </li>
                 <li>
                     <b>
-                        <div class="dropdown">
-                        <p><b>Origen</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Causas</a>
-                        <a href="https://academy.hubspot.com/">Factores de risc</a>
-                        <a href="https://www.youtube.com/user/hubspot">Sintomes</a>
-                        </div>
+                        <div class="volver">
+                            <a href="Causas.html" class="Volver">
+                                <b>Causas</b>
+                            </a>
                         </div>
                     </b>
                 </li>
                 <li>
                     <b>
-                        <div class="dropdown">
-                        <p><b>Prevenciones</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Mesures de prevenció</a>
-                        <a href="https://academy.hubspot.com/">Recomanacions per viure amb cardiopatía isquémica</a>
-                        </div>
+                        <div class="volver">
+                            <a href="Prevenciones.html" class="Volver">
+                                <b>Mesures de prevencio</b>
+                            </a>
                         </div>
                     </b>
                 </li>
                 <li>
                     <b>
-                        <div class="dropdown">
-                        <p><b>Tratamiento</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Alimentació</a>
-                        <a href="https://academy.hubspot.com/">Tractaments</a>
+                        <div class="volver">
+                            <div class="Volver2">
+                                <b>Tratamiento</b>
+                            </div>
                         </div>
+                    </b>
+                </li>                    
+                <li>
+                    <b>
+                        <div class="volver">
+                            <a href="posarlinkpercuraciones" class="Volver">
+                                <b>Curaciones</b>
+                            </a>
                         </div>
                     </b>
                 </li>
                 <li>
                     <b>
-                        <div class="dropdown">
-                        <p><b>Curaciones</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Medicaments per tracta aquesta malaltia</a>
-                        <a href="https://academy.hubspot.com/">Angioplastia</a>
-                        </div>
-                        </div>
-                    </b>
-                </li>
-                <li>
-                    <b>
-                        <div class="dropdown">
-                        <p><b>Grafico de casos</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Quan temps es pot viure amb aquesta malaltia?</a>
-                        <a href="https://academy.hubspot.com/">A quantes persones afecta la malaltia?</a>
-                        </div>
+                        <div class="volver">
+                            <a href="posarlinkpergraficodecasos" class="Volver">
+                                <b>Grafico de casos</b>
+                            </a>
                         </div>
                     </b>
                 </li>
@@ -78,19 +67,28 @@
         </nav>
         <main>
             <article>
-                <p>ALIMENTACIÓ</p>
+                <div class="paragrafo">
+                <h2>Alimentacio</h2>
+                <hr>
                 <p>Hacer piramide</p>
-                <p>TRACTAMENTS</p>
-                <p>El tractament farmacològic habitual són:</p>
-                <p>&nbsp Analgèsics.</p>
-                <p>&nbsp Antiagregants plaquetaris.</p>
-                <p>&nbsp Betabloquejants.</p>
-                <p>&nbsp Antagonistes de calci.</p>
-                <p>&nbsp Estatines. </p>
-                <p>El tractament quirúrgic per als casos més greus inclou:</p>
-                <p>&nbsp Angioplàstia.</p>
-                <p>&nbsp Col·locació de stents.</p>
-                <p>&nbsp Bypass coronari.</p>
+                <br>
+                
+                <h2>Tractaments</h2>
+                <hr>
+                <h3>El tractament farmacològic habitual són:</h3>
+                <br>
+                <p>· &nbsp Analgèsics.</p>
+                <p>· &nbsp Antiagregants plaquetaris.</p>
+                <p>· &nbsp Betabloquejants.</p>
+                <p>· &nbsp Antagonistes de calci.</p>
+                <p>· &nbsp Estatines. </p>
+                <h2>El tractament quirúrgic per als casos més greus inclou:</h2>
+                <hr>
+                <br>
+                <p>· &nbsp Angioplàstia.</p>
+                <p>· &nbsp Col·locació de stents.</p>
+                <p>· &nbsp Bypass coronari.</p>
+                </div>   
             </article>
             <aside>
                 <table>
@@ -189,7 +187,7 @@
                             <p>
                                 <div class="reset">
                                     <form>
-                                        <textarea rows="1" cols="50">Añade tu comentario...</textarea>
+                                        <textarea rows="1" cols="40"></textarea>
                                         <input type="submit" value="Añadir comentario">
                                     </form>                                      
                                 </div>
