--- a/apartados Nueva version/Causas.html
+++ b/apartados Nueva version/Causas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardiopatía</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="styleCausas.css">
 
 </head>
 <body>
@@ -13,64 +13,53 @@
             <ul>
                 <li>
                     <div class="volver">
-                        <a href="posarlinkpertornar" class="Volver">
+                        <a href="Introduccion.html" class="Volver">
                             <b>Volver</b>
                         </a>
                     </div>
                 </li>
                 <li>
                     <b>
-                        <div class="dropdown">
-                        <p><b>Origen</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Causas</a>
-                        <a href="https://academy.hubspot.com/">Factores de risc</a>
-                        <a href="https://www.youtube.com/user/hubspot">Sintomes</a>
-                        </div>
+                        <div class="volver">
+                            <div class="Volver2">
+                                <b>Causas</b>
+                            </div>
                         </div>
                     </b>
                 </li>
                 <li>
                     <b>
-                        <div class="dropdown">
-                        <p><b>Prevenciones</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Mesures de prevenció</a>
-                        <a href="https://academy.hubspot.com/">Recomanacions per viure amb cardiopatía isquémica</a>
-                        </div>
+                        <div class="volver">
+                            <a href="Prevenciones.html" class="Volver">
+                                <b>Mesures de prevenció</b>
+                            </a>
                         </div>
                     </b>
                 </li>
                 <li>
                     <b>
-                        <div class="dropdown">
-                        <p><b>Tratamiento</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Alimentació</a>
-                        <a href="https://academy.hubspot.com/">Tractaments</a>
+                        <div class="volver">
+                            <a href="TRATAMIENTO.html" class="Volver">
+                                <b>Tratamiento</b>
+                            </a>
                         </div>
+                    </b>
+                </li>                    
+                <li>
+                    <b>
+                        <div class="volver">
+                            <a href="posarlinkpercuraciones" class="Volver">
+                                <b>Curaciones</b>
+                            </a>
                         </div>
                     </b>
                 </li>
                 <li>
                     <b>
-                        <div class="dropdown">
-                        <p><b>Curaciones</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Medicaments per tracta aquesta malaltia</a>
-                        <a href="https://academy.hubspot.com/">Angioplastia</a>
-                        </div>
-                        </div>
-                    </b>
-                </li>
-                <li>
-                    <b>
-                        <div class="dropdown">
-                        <p><b>Grafico de casos</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Quan temps es pot viure amb aquesta malaltia?</a>
-                        <a href="https://academy.hubspot.com/">A quantes persones afecta la malaltia?</a>
-                        </div>
+                        <div class="volver">
+                            <a href="posarlinkpergraficodecasos" class="Volver">
+                                <b>Grafico de casos</b>
+                            </a>
                         </div>
                     </b>
                 </li>
@@ -78,27 +67,37 @@
         </nav>
         <main>
             <article>
-                <p>CAUSES</p>
-                <p>Aquesta malaltia és deguda a l'estrenyiment de les artèries coronàries. És un procés que, generalment, es produeix de manera gradual. Al llarg de la vida es va acumulant greix (lípids), o també anomenades plaques d'ateroma, a les parets de les artèries, si aquestes plaques no es dissolen es van emmagatzemant. A poc a poc aquestes plaques van dificultant el pas de la sang per les artèries i endurint-ne la paret, tornant-se gruixuda i poc flexible. A aquest problema també se'l coneix com a arteriosclerosi.</p>
-                <p>Factors de riscs</p>
-                <p>-N’hi ha una sèrie de factors de risc, uns modificables i altres no, que dificulten la desaparició de les plaques d'ateroma com ara:</p>
-                <p>-Edat avançada.</p>
-                <p>-Sexe masculí.</p>
-                <p>-Antecedents familiars de cardiopatia isquèmica abans dels 50 anys.</p>
-                <p>-Concentració alta de colesterol LDL a sang i baixa de lipoproteïnes altes (HDL).</p>
-                <p>-Consum de tabac.</p>
-                <p>-Patir diabetis mellitus, obesitat o hipertensió arterial.</p>
-                <p>-Hàbits no saludables: mala alimentació, poca activitat física.</p>
-                <p>SINTOMES</p>
-                <p>-La pressió o dolor en el pit (en general en el costat esquerre) que es produeix amb l'activitat física o després dels menjars.</p>
-                <p>-Dolor en el coll i  la mandíbula. </p>
-                <p>-Dolor en l'espatlla o al braç.</p>
-                <p>-Batecs de cor ràpids.</p>
-                <p>-Dificultat per a respirar quan estàs físicament actiu.</p>
-                <p>-Nàusees i vòmits.</p>
-                <p>-Sudoració.</p>
-                <p>-Fatiga.</p>
+                <div class="texto">
+                    <div class="textoescrito">
+                        <div class="paragrafo">
+                            <h2>Causes</h2>
+                            <hr>
+                            <p>Aquesta malaltia és deguda a l'estrenyiment de les artèries coronàries. És un procés que, generalment, es produeix de manera gradual. Al llarg de la vida es va acumulant greix (lípids), o també anomenades plaques d'ateroma, a les parets de les artèries, si aquestes plaques no es dissolen es van emmagatzemant. A poc a poc aquestes plaques van dificultant el pas de la sang per les artèries i endurint-ne la paret, tornant-se gruixuda i poc flexible. A aquest problema també se'l coneix com a arteriosclerosi.</p>
+                            <h2>Factors de riscs</h2>
+                            <hr>
+                            <p>-N’hi ha una sèrie de factors de risc, uns modificables i altres no, que dificulten la desaparició de les plaques d'ateroma com ara:</p>
+                            <p>-Edat avançada.</p>
+                            <p>-Sexe masculí.</p>
+                            <p>-Antecedents familiars de cardiopatia isquèmica abans dels 50 anys.</p>
+                            <p>-Concentració alta de colesterol LDL a sang i baixa de lipoproteïnes altes (HDL).</p>
+                            <p>-Consum de tabac.</p>
+                            <p>-Patir diabetis mellitus, obesitat o hipertensió arterial.</p>
+                            <p>-Hàbits no saludables: mala alimentació, poca activitat física.</p>
+                            <h2>SINTOMES</h2>
+                            <hr>
+                            <p>-La pressió o dolor en el pit (en general en el costat esquerre) que es produeix amb l'activitat física o després dels menjars.</p>
+                            <p>-Dolor en el coll i  la mandíbula. </p>
+                            <p>-Dolor en l'espatlla o al braç.</p>
+                            <p>-Batecs de cor ràpids.</p>
+                            <p>-Dificultat per a respirar quan estàs físicament actiu.</p>
+                            <p>-Nàusees i vòmits.</p>
+                            <p>-Sudoració.</p>
+                            <p>-Fatiga.</p>
+                        </div>
+                    </div>
+                </div>
             </article>
+    
             <aside>
                 <table>
                     <tr>
@@ -196,7 +195,7 @@
                             <p>
                                 <div class="reset">
                                     <form>
-                                        <textarea rows="1" cols="50">Añade tu comentario...</textarea>
+                                        <textarea rows="1" cols="40"></textarea>
                                         <input type="submit" value="Añadir comentario">
                                     </form>                                      
                                 </div>
