--- a/apartados Nueva version/Prevenciones.html
+++ b/apartados Nueva version/Prevenciones.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardiopatía</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="stylePrevenciones.css">
 
 </head>
 <body>
@@ -13,64 +13,53 @@
             <ul>
                 <li>
                     <div class="volver">
-                        <a href="posarlinkpertornar" class="Volver">
+                        <a href="Introduccion.html" class="Volver">
                             <b>Volver</b>
                         </a>
                     </div>
                 </li>
                 <li>
                     <b>
-                        <div class="dropdown">
-                        <p><b>Origen</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Causas</a>
-                        <a href="https://academy.hubspot.com/">Factores de risc</a>
-                        <a href="https://www.youtube.com/user/hubspot">Sintomes</a>
-                        </div>
+                        <div class="volver">
+                            <a href="Causas.html" class="Volver">
+                                <b>Causas</b>
+                            </a>
                         </div>
                     </b>
                 </li>
                 <li>
                     <b>
-                        <div class="dropdown">
-                        <p><b>Prevenciones</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Mesures de prevenció</a>
-                        <a href="https://academy.hubspot.com/">Recomanacions per viure amb cardiopatía isquémica</a>
-                        </div>
+                        <div class="volver">
+                            <div class="Volver2">
+                                <b>Mesures de prevenció</b>
+                            </div>
                         </div>
                     </b>
                 </li>
                 <li>
                     <b>
-                        <div class="dropdown">
-                        <p><b>Tratamiento</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Alimentació</a>
-                        <a href="https://academy.hubspot.com/">Tractaments</a>
+                        <div class="volver">
+                            <a href="TRATAMIENTO.html" class="Volver">
+                                <b>Tratamiento</b>
+                            </a>
                         </div>
+                    </b>
+                </li>                    
+                <li>
+                    <b>
+                        <div class="volver">
+                            <a href="posarlinkpercuraciones" class="Volver">
+                                <b>Curaciones</b>
+                            </a>
                         </div>
                     </b>
                 </li>
                 <li>
                     <b>
-                        <div class="dropdown">
-                        <p><b>Curaciones</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Medicaments per tracta aquesta malaltia</a>
-                        <a href="https://academy.hubspot.com/">Angioplastia</a>
-                        </div>
-                        </div>
-                    </b>
-                </li>
-                <li>
-                    <b>
-                        <div class="dropdown">
-                        <p><b>Grafico de casos</b></p>
-                        <div class="dropdown-content">
-                        <a href="https://blog.hubspot.com/">Quan temps es pot viure amb aquesta malaltia?</a>
-                        <a href="https://academy.hubspot.com/">A quantes persones afecta la malaltia?</a>
-                        </div>
+                        <div class="volver">
+                            <a href="posarlinkpergraficodecasos" class="Volver">
+                                <b>Grafico de casos</b>
+                            </a>
                         </div>
                     </b>
                 </li>
@@ -78,12 +67,95 @@
         </nav>
         <main>
             <article>
-                <p>MESURES DE PREVENCIÓ</p>
-                <p>-Deixar el consum de tabac.</p>
-                <p>-Mantenir estables els nivells de LDL i HDL. </p>
-                <p>-Mantenir o reduir pes.</p>
-                <p>-Controlar la pressió arterial.</p>
-                <p>-Realitzar activitat física de manera regular i adaptada a les teves possibilitats.</p>
+                <div class="paragrafo">
+                    <h2>MESURES DE PREVENCIÓ</h2>
+                    <hr>
+                    <p>
+                        <img class="fotointro" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/beneficios-cardiovasculares-ejercicio.png?raw=true">
+                        · Deixar el consum de tabac.
+                        <br>
+                        · Mantenir estables els nivells de LDL i HDL.
+                        <br>
+                        · Mantenir o reduir pes.
+                        <br>
+                        · Controlar la pressió arterial.
+                        <br>
+                        · Realitzar activitat física de manera regular i adaptada a les teves possibilitats.
+                    </p>
+                    <br>
+                    <h2>Recomendacions a partir de diagnostic</h2>
+                    <hr>
+                    <p>
+                        <b>
+                            <a class="tooltip">
+                                <img src="https://raw.githubusercontent.com/SonicJD/TrabajoFarmacia/main/farmacia%20m8/mano.png" width="20px" height="20px">
+                                <span>
+                                    Portar una dieta o alimentació cardiosaludable.
+                                </span>
+                            </a>
+                        </b>
+                        <br>
+                        <br>
+                        <b>
+                            <a class="tooltip">
+                                <img src="https://raw.githubusercontent.com/SonicJD/TrabajoFarmacia/main/farmacia%20m8/mano.png" width="20px" height="20px">
+                                <span>
+                                    Realitzar activitat física moderada de manera periòdica. 
+                                </span>
+                            </a>
+                        </b>
+                        <br>
+                        <br>
+                        <b>
+                            <a class="tooltip">
+                                <img src="https://raw.githubusercontent.com/SonicJD/TrabajoFarmacia/main/farmacia%20m8/mano.png" width="20px" height="20px">
+                                <span>
+                                    Evitar l’ ansietat o depressió.
+                                </span>
+                            </a>
+                        </b>
+                        <br>
+                        <br>
+                        <b>
+                            <a class="tooltip">
+                                <img src="https://raw.githubusercontent.com/SonicJD/TrabajoFarmacia/main/farmacia%20m8/mano.png" width="20px" height="20px">
+                                <span>
+                                    Controlar el pes.
+                                </span>
+                            </a>
+                        </b>
+                        <br>
+                        <br>
+                        <b>
+                            <a class="tooltip">
+                                <img src="https://raw.githubusercontent.com/SonicJD/TrabajoFarmacia/main/farmacia%20m8/mano.png" width="20px" height="20px">
+                                <span>
+                                    Abandonar hàbits nocius com el consum de tabac o alcohol.
+                                </span>
+                            </a>
+                        </b>
+                        <br>
+                        <br>
+                        <b>
+                            <a class="tooltip">
+                                <img src="https://raw.githubusercontent.com/SonicJD/TrabajoFarmacia/main/farmacia%20m8/mano.png" width="20px" height="20px">
+                                <span>
+                                    Prendre la medicació de manera adequada i seguint correctament la posologia.
+                                </span>
+                            </a>
+                        </b>
+                        <br>
+                        <br>
+                        <b>
+                            <a class="tooltip">
+                                <img src="https://raw.githubusercontent.com/SonicJD/TrabajoFarmacia/main/farmacia%20m8/mano.png" width="20px" height="20px">
+                                <span>
+                                    Relaxar-se i portar un estil de vida tranquil·la.
+                                </span>
+                            </a>
+                        </b>
+                    </p>
+                </div>   
             </article>
             <aside>
                 <table>
@@ -182,7 +254,7 @@
                             <p>
                                 <div class="reset">
                                     <form>
-                                        <textarea rows="1" cols="50">Añade tu comentario...</textarea>
+                                        <textarea rows="1" cols="40"></textarea>
                                         <input type="submit" value="Añadir comentario">
                                     </form>                                      
                                 </div>
