--- a/apartados Nueva version/Introduccion.html
+++ b/apartados Nueva version/Introduccion.html
@@ -81,7 +81,134 @@
             </article>
     
             <aside>
-                <table>
+                <!--INICI-->
+                <ul class="chatList">
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                </ul>
+                <p>
+                    <div class="reset">
+                        <form>
+                            <div class="comentario">
+                                <textarea rows="1" cols="42"></textarea>
+                            </div>
+                            <input type="submit" value="Añadir comentario">
+                        </form>                                      
+                    </div>
+                </p>
+                <!--FINAL-->
+
+                <!--<table>
                     <tr>
                         <th>
                             <div class="mensaje">
@@ -184,10 +311,14 @@
                             </p>
                         </th>
                     </tr>
-                </table>
+                </table>-->
             </aside>
         </main>
-        <footer>Contacto</footer>
+        <footer>
+            <p class="footer">
+                Contacto
+            </p>
+        </footer>
     </div>
 </body>
 </html>
