--- a/apartados Nueva version/Introduccion.html
+++ b/apartados Nueva version/Introduccion.html
@@ -200,9 +200,9 @@
                     <div class="reset">
                         <form>
                             <div class="comentario">
-                                <textarea rows="1" cols="42"></textarea>
+                                <textarea rows="1" cols="20"></textarea>
                             </div>
-                            <input type="submit" value="Añadir comentario">
+                            <input class="boton" type="submit" value="Añadir comentario">
                         </form>                                      
                     </div>
                 </p>
