--- a/apartados Nueva version/Introduccion.html
+++ b/apartados Nueva version/Introduccion.html
@@ -196,16 +196,17 @@
                         </div>
                     </li>
                 </ul>
-                <p>
-                    <div class="reset">
-                        <form>
-                            <div class="comentario">
-                                <textarea rows="1" cols="20"></textarea>
-                            </div>
-                            <input class="boton" type="submit" value="Añadir comentario">
-                        </form>                                      
-                    </div>
-                </p>
+                <ul class="comment">
+                    <li>
+                        <div class="comentario">
+                            <textarea rows="1" cols="20"></textarea>
+                        </div>
+                     </li>
+                    <li>
+                        <input class="boton" type="submit" value="Añadir comentario">
+                    </li>
+                </ul>                                      
+
                 <!--FINAL-->
 
                 <!--<table>
