--- a/apartados Nueva version/GraficoCasos.html
+++ b/apartados Nueva version/GraficoCasos.html
@@ -21,9 +21,9 @@
                 <li>
                     <b>
                         <div class="volver">
-                            <div class="Volver2">
+                            <a href="Causas.html" class="Volver">
                                 <b>Causes</b>
-                            </div>
+                            </a>
                         </div>
                     </b>
                 </li>
@@ -57,9 +57,9 @@
                 <li>
                     <b>
                         <div class="volver">
-                            <a href="GraficoCasos.html" class="Volver">
+                            <div class="Volver2">
                                 <b>Grafics de casos</b>
-                            </a>
+                            </div>
                         </div>
                     </b>
                 </li>
@@ -68,36 +68,15 @@
         <main>
             <article>
                 <div class="texto">
-                    <div class="textoescrito">
-                        <div class="paragrafo">
-                            <h2>Causes</h2>
-                            <hr>
-                            <p>Aquesta malaltia és deguda a l'estrenyiment de les artèries coronàries. És un procés que, generalment, es produeix de manera gradual. Al llarg de la vida es va acumulant greix (lípids), o també anomenades plaques d'ateroma, a les parets de les artèries, si aquestes plaques no es dissolen es van emmagatzemant. A poc a poc aquestes plaques van dificultant el pas de la sang per les artèries i endurint-ne la paret, tornant-se gruixuda i poc flexible. A aquest problema també se'l coneix com a arteriosclerosi.</p>
-                            <h2>Factors de riscs</h2>
-                            <hr>
-                            <p>-N’hi ha una sèrie de factors de risc, uns modificables i altres no, que dificulten la desaparició de les plaques d'ateroma com ara:</p>
-                            <p>-Edat avançada.</p>
-                            <p>-Sexe masculí.</p>
-                            <p>-Antecedents familiars de cardiopatia isquèmica abans dels 50 anys.</p>
-                            <p>-Concentració alta de colesterol LDL a sang i baixa de lipoproteïnes altes (HDL).</p>
-                            <p>-Consum de tabac.</p>
-                            <p>-Patir diabetis mellitus, obesitat o hipertensió arterial.</p>
-                            <p>-Hàbits no saludables: mala alimentació, poca activitat física.</p>
-                            <h2>SINTOMES</h2>
-                            <hr>
-                            <p>-La pressió o dolor en el pit (en general en el costat esquerre) que es produeix amb l'activitat física o després dels menjars.</p>
-                            <p>-Dolor en el coll i  la mandíbula. </p>
-                            <p>-Dolor en l'espatlla o al braç.</p>
-                            <p>-Batecs de cor ràpids.</p>
-                            <p>-Dificultat per a respirar quan estàs físicament actiu.</p>
-                            <p>-Nàusees i vòmits.</p>
-                            <p>-Sudoració.</p>
-                            <p>-Fatiga.</p>
-                        </div>
+                    <h2>Què és</h2>
+                    <hr>
+                    <div class="paragrafo">
+                        <p>La cardiopatia isquèmica, o malaltia de les artèries coronàries, és una malaltia provocada per l'estrenyiment de les artèries que van al cor. Aquest problema fa que arribi un menor flux de sang al cor i causa un desequilibri en l'aportació d'oxigen al miocardi (teixit muscular del cor).
+                        </p>
+                        <img class="fotointro"   src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/portada-cardiopatia-isquemica-dr-arce-ab658721.png?raw=true">
                     </div>
                 </div>
             </article>
-    
             <aside>
                 <!--INICI-->
                 <ul class="chatList">
@@ -333,7 +312,11 @@
                 </table>-->
             </aside>
         </main>
-        <footer>Contacto</footer>
+        <footer>
+            <p class="footer">
+                Contacto
+            </p>
+        </footer>
     </div>
 </body>
 </html>
