--- a/apartados Nueva version/curaciones.html
+++ b/apartados Nueva version/curaciones.html
@@ -21,9 +21,9 @@
                 <li>
                     <b>
                         <div class="volver">
-                            <div class="Volver2">
+                            <a href="Causas.html" class="Volver">
                                 <b>Causes</b>
-                            </div>
+                            </a>
                         </div>
                     </b>
                 </li>
@@ -48,9 +48,9 @@
                 <li>
                     <b>
                         <div class="volver">
-                            <a href="curaciones.html" class="Volver">
+                            <div class="Volver2">
                                 <b>Curacions</b>
-                            </a>
+                            </div>
                         </div>
                     </b>
                 </li>
@@ -68,36 +68,57 @@
         <main>
             <article>
                 <div class="texto">
-                    <div class="textoescrito">
-                        <div class="paragrafo">
-                            <h2>Causes</h2>
-                            <hr>
-                            <p>Aquesta malaltia és deguda a l'estrenyiment de les artèries coronàries. És un procés que, generalment, es produeix de manera gradual. Al llarg de la vida es va acumulant greix (lípids), o també anomenades plaques d'ateroma, a les parets de les artèries, si aquestes plaques no es dissolen es van emmagatzemant. A poc a poc aquestes plaques van dificultant el pas de la sang per les artèries i endurint-ne la paret, tornant-se gruixuda i poc flexible. A aquest problema també se'l coneix com a arteriosclerosi.</p>
-                            <h2>Factors de riscs</h2>
-                            <hr>
-                            <p>-N’hi ha una sèrie de factors de risc, uns modificables i altres no, que dificulten la desaparició de les plaques d'ateroma com ara:</p>
-                            <p>-Edat avançada.</p>
-                            <p>-Sexe masculí.</p>
-                            <p>-Antecedents familiars de cardiopatia isquèmica abans dels 50 anys.</p>
-                            <p>-Concentració alta de colesterol LDL a sang i baixa de lipoproteïnes altes (HDL).</p>
-                            <p>-Consum de tabac.</p>
-                            <p>-Patir diabetis mellitus, obesitat o hipertensió arterial.</p>
-                            <p>-Hàbits no saludables: mala alimentació, poca activitat física.</p>
-                            <h2>SINTOMES</h2>
-                            <hr>
-                            <p>-La pressió o dolor en el pit (en general en el costat esquerre) que es produeix amb l'activitat física o després dels menjars.</p>
-                            <p>-Dolor en el coll i  la mandíbula. </p>
-                            <p>-Dolor en l'espatlla o al braç.</p>
-                            <p>-Batecs de cor ràpids.</p>
-                            <p>-Dificultat per a respirar quan estàs físicament actiu.</p>
-                            <p>-Nàusees i vòmits.</p>
-                            <p>-Sudoració.</p>
-                            <p>-Fatiga.</p>
+                    <h2>Medicaments per tractar la malaltia</h2>
+                    <div class="paragrafo">
+                        <h3>Betabloquejants</h3>
+                        <hr>
+                        <div class="list-cases">
+                            <img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/Atenolol%20(Tenormin).png?raw=truee" alt="image"/>
+                            <a class="text" data-cases="quietevents" href="#">Atenolol</a>
                         </div>
+                        <br>
+                        <div class="list-cases">
+                            <img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/Propranolol%20(Inderal).png?raw=true" alt="image"/>
+                            <a class="text" data-cases="quietevents" href="#">Propranolol (Inderal)</a>
+                        </div>
+                        <br>
+                        <div class="list-cases">
+                            <img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/Bisoprolol%20(Zebeta).png?raw=true" alt="image"/>
+                            <a class="text" data-cases="quietevents" href="#">Bisoprolol (Zebeta)</a>
+                        </div>
+                        <br>
+                        <br>
+                        <h3>Antiagregant plaquetaris</h3>
+                        <hr>
+                        <div class="list-cases">
+                            <img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/Clopidogrel.png?raw=true" alt="image"/>
+                            <a class="text" data-cases="quietevents" href="#">Clopidogrel</a>
+                        </div>
+                        <br>
+                        <div class="list-cases">
+                            <img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/Aspirina.png?raw=true" alt="image"/>
+                            <a class="text" data-cases="quietevents" href="#">Aspirina</a>
+                        </div>
+                        <br>
+                        <div class="list-cases">
+                            <img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/Triflusal.png?raw=true" alt="image"/>
+                            <a class="text" data-cases="quietevents" href="#">Triflusal</a>
+                        </div>
+                        <br>
+                        <br>
+                        <h3>Estatines</h3>
+                        <hr>
+                        <div class="list-cases">
+                            <img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/Atorvastatina.png?raw=true" alt="image"/>
+                            <a class="text" data-cases="quietevents" href="#">Atorvastatina</a>
+                        </div>
+                        <br>
+                        <div class="list-cases">
+                            <img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/Pravastatina.png?raw=true" alt="image"/>
+                            <a class="text" data-cases="quietevents" href="#">Pravastatina</a>
                     </div>
                 </div>
             </article>
-    
             <aside>
                 <!--INICI-->
                 <ul class="chatList">
@@ -333,7 +354,11 @@
                 </table>-->
             </aside>
         </main>
-        <footer>Contacto</footer>
+        <footer>
+            <p class="footer">
+                Contacto
+            </p>
+        </footer>
     </div>
 </body>
 </html>
