--- a/apartados Nueva version/Introduccion.html
+++ b/apartados Nueva version/Introduccion.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cardiopatía</title>
-    <link rel="stylesheet" href="styleintro.css">
+    <title>Cardiopatía</title>
+    <link rel="stylesheet" href="styleCuraciones.css">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
                 <li>
                     <div class="volver">
                         <a href="Introduccion.html" class="Volver">
-                            <b>Volver</b>
+                            <img class="volverfoto" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/cardiopatia-isquemica.png?raw=true">
                         </a>
                     </div>
                 </li>
@@ -22,7 +22,7 @@
                     <b>
                         <div class="volver">
                             <a href="Causas.html" class="Volver">
-                                <b>Causas</b>
+                                <b>Causes</b>
                             </a>
                         </div>
                     </b>
@@ -40,7 +40,7 @@
                     <b>
                         <div class="volver">
                             <a href="TRATAMIENTO.html" class="Volver">
-                                <b>Tratamiento</b>
+                                <b>Tratactament</b>
                             </a>
                         </div>
                     </b>
@@ -48,8 +48,8 @@
                 <li>
                     <b>
                         <div class="volver">
-                            <a href="posarlinkpercuraciones" class="Volver">
-                                <b>Curaciones</b>
+                            <a href="curaciones.html" class="Volver">
+                                <b>Curacions</b>
                             </a>
                         </div>
                     </b>
@@ -57,8 +57,8 @@
                 <li>
                     <b>
                         <div class="volver">
-                            <a href="posarlinkpergraficodecasos" class="Volver">
-                                <b>Grafico de casos</b>
+                            <a href="GraficoCasos.html" class="Volver">
+                                <b>Grafics de casos</b>
                             </a>
                         </div>
                     </b>
@@ -68,18 +68,15 @@
         <main>
             <article>
                 <div class="texto">
-                    <div class="textoescrito">
-                        <h1>QUÈ ÉS?</h1>
-                        <hr>
-                        <div class="paragrafo">
-                            <p>La cardiopatia isquèmica, o malaltia de les artèries coronàries, és una malaltia provocada per l'estrenyiment de les artèries que van al cor. Aquest problema fa que arribi un menor flux de sang al cor i causa un desequilibri en l'aportació d'oxigen al miocardi (teixit muscular del cor).
-                            </p>
-                            <img class="fotointro"   src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/portada-cardiopatia-isquemica-dr-arce-ab658721.png?raw=true">
-                        </div>
+                    <h2>¿Què és?</h2>
+                    <hr>
+                    <div class="paragrafo">
+                        <p>La cardiopatia isquèmica, o malaltia de les artèries coronàries, és una malaltia provocada per l'estrenyiment de les artèries que van al cor. Aquest problema fa que arribi un menor flux de sang al cor i causa un desequilibri en l'aportació d'oxigen al miocardi (teixit muscular del cor).
+                        </p>
+                        <img class="fotointro"   src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/portada-cardiopatia-isquemica-dr-arce-ab658721.png?raw=true">
                     </div>
                 </div>
             </article>
-    
             <aside>
                 <!--INICI-->
                 <ul class="chatList">
