--- a/apartados Nueva version/TRATAMIENTO.html
+++ b/apartados Nueva version/TRATAMIENTO.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardiopatía</title>
-    <link rel="stylesheet" href="stylePrevenciones.css">
+    <link rel="stylesheet" href="styleCuraciones.css">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
                 <li>
                     <div class="volver">
                         <a href="Introduccion.html" class="Volver">
-                            <b>Volver</b>
+                            <img class="volverfoto" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/cardiopatia-isquemica.png?raw=true">
                         </a>
                     </div>
                 </li>
@@ -22,7 +22,7 @@
                     <b>
                         <div class="volver">
                             <a href="Causas.html" class="Volver">
-                                <b>Causas</b>
+                                <b>Causes</b>
                             </a>
                         </div>
                     </b>
@@ -31,7 +31,7 @@
                     <b>
                         <div class="volver">
                             <a href="Prevenciones.html" class="Volver">
-                                <b>Mesures de prevencio</b>
+                                <b>Mesures de prevenció</b>
                             </a>
                         </div>
                     </b>
@@ -40,7 +40,7 @@
                     <b>
                         <div class="volver">
                             <div class="Volver2">
-                                <b>Tratamiento</b>
+                                <b>Tratactament</b>
                             </div>
                         </div>
                     </b>
@@ -48,8 +48,8 @@
                 <li>
                     <b>
                         <div class="volver">
-                            <a href="posarlinkpercuraciones" class="Volver">
-                                <b>Curaciones</b>
+                            <a href="curaciones.html" class="Volver">
+                                <b>Curacions</b>
                             </a>
                         </div>
                     </b>
@@ -57,8 +57,8 @@
                 <li>
                     <b>
                         <div class="volver">
-                            <a href="posarlinkpergraficodecasos" class="Volver">
-                                <b>Grafico de casos</b>
+                            <a href="GraficoCasos.html" class="Volver">
+                                <b>Grafics de casos</b>
                             </a>
                         </div>
                     </b>
@@ -91,7 +91,134 @@
                 </div>   
             </article>
             <aside>
-                <table>
+                <ul class="chatList">
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="mensaje">
+                        <p><img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/user_icon_149851.png?raw=true" width="25px" height="25px">
+                            A mi abuelo le paso eso
+                        </p>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="comment">
+                    <li>
+                        <div class="comentario">
+                            <textarea rows="1" cols="20"></textarea>
+                        </div>
+                    </li>
+                    <li>
+                        <input class="boton" type="submit" value="Añadir comentario">
+                    </li>
+                </ul>                                      
+
+                <!--FINAL-->
+
+                <!--<table>
                     <tr>
                         <th>
                             <div class="mensaje">
@@ -194,8 +321,8 @@
                             </p>
                         </th>
                     </tr>
-                </table>
-            </aside>
+                </table>-->
+        </aside>
         </main>
         <footer>Contacto</footer>
     </div>
